# gdbsos

./: .gitignore  .gitmodules  LICENSE  README.md  build.sh
.devcontainer/: devcontainer.json  post-start.sh
docs/: faq.md
scripts/: deploy-bridge.sh  hang_capture.gdb  run_with_capture.sh  update-sub-diagnostics.sh
src/: CMakeLists.txt
src/gdbplugin/: CMakeLists.txt
src/gdbplugin/bridge/: CMakeLists.txt  bridge.cpp  gdbbridge.cpp
src/gdbplugin/bridge/cmake/: DeployToCurrent.cmake
src/gdbplugin/sos/: CMakeLists.txt  abi.py  services.py  sos.py  tracing.py
tests/gdb/: README.md  gdbtestutils.py  test.sh  test_gdbsos.py
tests/gdb/logs/: summary
tests/gdb/scenarios/: t_cmd_clrstack.py  t_cmd_dso.py  t_cmd_soshelp.py
